--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.10.2",
+    "requirejs": "^2.2.0",
     "socket.io": "^1.4.6"
   }
 }
